fix padding on chrome, see what it looks like on iphone

--- a/search/css/panda.css
+++ b/search/css/panda.css
@@ -282,7 +282,7 @@ button.menu div.text {
 
     div.pandaName, div.zooName {
         margin-left: 8px;
-        margin-right: 13px;
+        margin-right: 12px;
     }
 
     div.pandaDossier, div.zooDossier {
